[package]
name = "tree-sitter-vento"
description = "Vento grammar for tree-sitter"
version = "0.21.0"
authors = [
    "Matthew Taylor",
    "Bob Rockefeller"
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["vento", "template-engine", "parsing"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ventojs/tree-sitter-vento"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.26.5"

[build-dependencies]
cc = "1.0"
